-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0
-
None
-
5e996ca11 (master)
User may have several kits, whose names are long and close to each other. When selecting the deploy configuration, part of the kit name may be cut off, which makes the kit selection challenging.
Maybe the column widths in the deploy configuration could be adjusted.
- relates to
-
QTCREATORBUG-30476 Project with long kit names are shown as elided text when switching from project with shorter kit name in Deploy configuration
-
- Reported
-
For Gerrit Dashboard: QTCREATORBUG-30038 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
524753,3 | ProjectExplorer: Do not use a fixed maximum width | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |