ProjectExplorer: Do not use a fixed maximum width

... for the MiniProjectTargetSelector.
Instead, use a maximum width relative to the main window width,
similarly to what we did for the height in
ef00a7e28b329b62452055b610fb7df978fa6345.

Fixes: QTCREATORBUG-30038
Change-Id: If3de0460ea8e9ce43bfc795d6aba9d466c141313
Reviewed-by: Eike Ziller <eike.ziller@qt.io>